# scope

./: .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  BENCHMARK.md  CLAUDE.md  Dockerfile  Dockerfile.cloud  Dockerfile.cu130  Dockerfile.minimal  Dockerfile.ultra-minimal  ELECTRON_SETUP.md  FAL_DEPLOYMENT.md  HACKATHON-REFERENCE.md  PERF-NOTES.md  PR_229_RESPONSE.md  README.md  TODO.md  VACE_BLOG_OUTLINE.md  VACE_BLOG_OUTLINE_v2.md  VACE_BLOG_POST.md  VACE_INTEGRATION_OPTIONS.md  app.py  benchmark.py  benchmark_test.py  build.sh  concatenate_videos.py  deploy-staging.sh  diff.txt  download_models.py  entrypoint.sh  fal.py  fal_app.py  input-passthrough-rife.json  input.json  patches.pth  pr-229-review.md  pr-review.ps1  prompter.py  (+18 more)
.claude/: launch.json  settings.json
.claude/hooks/: format.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: build-electron-preview.yml  build-electron.yml  e2e-test.yml  (+13 more)
app/: BUILD.md  README.md  dev-app-update.yml  electron-builder.yml  forge.config.ts  index.html  package-lock.json  package.json  tsconfig.node.json  vite.main.config.ts  vite.renderer.config.ts
arxiv_paper/: main.tex  references.bib
controlnet_test/: __init__.py  preprocessors.py  test_controlnet_modular.py
docs/: contributing.md  fal-server-integration-plan.md  huggingface.md  livepeer.md  lora.md  ndi.md  osc.md  plugins.md  server.md  serverless.md  spout.md  syphon.md  technical.md  telemetry.md  tempo-sync-review.md  tempo-sync.md  vace.md  vae.md  virtualcam.md  web-source.md  workflows.md
e2e/: README.md  package-lock.json  package.json  playwright.config.ts
electron/: .gitignore  README.md  build-python-env.sh  build.sh  create-icons.sh  download-uv.sh  install-python-deps.js  main.js  package-lock.json  package.json  preload.js  vite.config.electron.js
evals/: README.md  __init__.py  __main__.py  case.py  driver.py  grader.py  runner.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tmpclaude-7786-cwd  tsconfig.app.json  vite.config.ts  vitest.config.ts
lib/: defaults.py  frame_processor.py  logs_config.py  models_config.py  pipeline_manager.py  pipeline_worker.py  schema.py  tracks.py  webrtc.py
pipelines/: blending.py  components.py  interface.py  utils.py
plugins/scope-layout-control/: README.md  pyproject.toml
plugins/scope-layout-control/src/scope_layout_control/: __init__.py  preprocessor.py
plugins/scope-moondream/: pyproject.toml
plugins/scope-moondream/src/scope_moondream/: __init__.py  overlay.py  pipeline.py  schema.py
plugins/scope-optical-flow-tensorrt/: README.md  pyproject.toml
plugins/scope-optical-flow-tensorrt/src/scope_optical_flow_tensorrt/: __init__.py  download.py  engine.py  preprocessor.py  visualization.py
plugins/scope-pose-tensorrt/: README.md  pyproject.toml
plugins/scope-pose-tensorrt/src/scope_pose_tensorrt/: __init__.py  download.py  engine.py  preprocessor.py  visualization.py
product-tests/: .gitignore  README.md  USER_GUIDE.md  WRITING_TESTS.md  conftest.py  pytest.ini
scope/: __init__.py
scope-personalive/: README.md  pyproject.toml
scope-personalive/scope_personalive/: __init__.py  model.yaml  pipeline.py  routes.py  schema.py  utils.py
scope-personalive/scope_personalive/docs/: README.md
scope-personalive/scope_personalive/modules/: convnextv2.py  pose_guider.py  unet_3d_blocks.py
scope-personalive/scope_personalive/tensorrt/: builder.py  convert.py  engine_model.py  export.py  unet_explicit.py
scripts/: benchmark_lipar.py  benchmark_scope_sdv2.py  generate_cloud_plugins.py  test_generate_endpoint.py  test_lora_download.py
src/scope/core/pipelines/krea_realtime_video/: __init__.py  model.yaml  modular_blocks.py  pipeline.py  pyproject.toml  schema.py  schema.yaml  test.py  test_v2v.py  test_vace.py
src/scope/core/pipelines/krea_realtime_video/blocks/: __init__.py  recompute_kv_cache.py  set_transformer_blocks_local_attn_size.py
src/scope/core/pipelines/krea_realtime_video/components/: __init__.py  vae.py
src/scope/core/pipelines/krea_realtime_video/docs/: usage.md
src/scope/core/pipelines/krea_realtime_video/modules/: causal_model.py  model.py
src/scope/core/pipelines/passthrough/: __init__.py  pipeline.py  pyproject.toml  schema.yaml
tests/: __init__.py  ablation_benchmark.py  ablation_benchmark_krea.py  conftest.py  mcp_multi_source_recording_test.md  test_agent_tool_impls.py  test_audio_processing_track.py  test_dag.py  test_dependency_validator.py  test_evals_smoke.py  test_frame_delivery.py  test_generate_endpoint.py  test_graph_executor.py  test_graph_schema.py  test_headless.py  test_headless_multi_stream.py  test_logs_config.py  test_lora_dimension_validation.py  test_lora_downloader.py  test_lora_manifest.py  test_lora_wait_for_file.py  test_multi_mode_pipeline.py  test_node_pipeline_unification.py  test_pacing.py  test_parameter_scheduler.py  test_pipeline_events.py  test_pipeline_manager.py  test_pipeline_manager_vace.py  test_pipeline_race_condition.py  test_pipeline_registry.py  test_pipeline_schema_metadata.py  test_plugin_api.py  test_plugin_manager.py  test_plugin_rollback_integration.py  test_recording.py  test_recording_coordinator.py  test_recording_packets.py  test_restart_api.py  test_seed_runtime_update.py  test_vace_encoding_block_missing_asset.py  (+6 more)
tests/fixtures/plugins/scope-test-plugin-compile-fail/: pyproject.toml
tests/fixtures/plugins/scope-test-plugin-compile-fail/src/scope_test_plugin_compile_fail/: __init__.py  plugin.py
tests/fixtures/plugins/scope-test-plugin-sync-fail/: hatch_build.py  pyproject.toml
tests/fixtures/plugins/scope-test-plugin-sync-fail/src/scope_test_plugin_sync_fail/: __init__.py  plugin.py
timelines/: 0.01bias.json  0.11bias.json  0.21bias.json  0.31bias.json  0.41bias.json  0.51bias.json  0.70bias.json  0.90bias.json  1.0bias.json
worker_env/: pyproject.toml
worker_env/src/scope_worker/: __init__.py  plugins.py  worker.py
worker_env/src/scope_worker/pipelines/: __init__.py  interface.py  schema.py
(+1184 files in other folders)
