[project]
name = "scope-personalive"
version = "0.1.0"
description = "PersonaLive portrait animation plugin for Daydream Scope"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Daydream Scope Contributors" }]
keywords = ["scope", "personalive", "portrait", "animation", "diffusion"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "daydream-scope",
]

[project.optional-dependencies]
tensorrt = [
    "tensorrt",
    "polygraphy",
    "pycuda",
]

[project.entry-points.scope]
personalive = "scope_personalive"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scope_personalive"]
