[project]
name = "scope-personalive"
version = "0.1.0"
description = "PersonaLive portrait animation plugin for Daydream Scope"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Daydream Scope Contributors" }]
keywords = ["scope", "personalive", "portrait", "animation", "diffusion"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "daydream-scope",
    # PersonaLive-specific dependencies
    "mediapipe==0.10.14",
    "xformers>=0.0.32.post2",
]

[project.optional-dependencies]
tensorrt = [
    "tensorrt>=10.0.0; sys_platform == 'linux' or sys_platform == 'win32'",
    "tensorrt-cu12>=10.0.0; sys_platform == 'linux' or sys_platform == 'win32'",
    "polygraphy>=0.49.0",
    "onnx>=1.17.0",
    "onnx-graphsurgeon>=0.5.0",
]

[project.scripts]
convert-personalive-trt = "scope_personalive.tensorrt.convert:main"
patch-xformers = "scope_personalive.patch_xformers:main"

[project.entry-points.scope]
personalive = "scope_personalive"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scope_personalive"]
