[project]
name = "scope-worker-base"
version = "0.1.0"
description = "Base worker process for daydream-scope pipeline execution"
requires-python = ">=3.10.12"
dependencies = [
    "pyzmq>=26.0.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "torch",
    "omegaconf>=2.3.0",
]

[project.scripts]
scope-worker = "scope_worker.worker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scope_worker"]
