[project]
name = "scope-pose-tensorrt"
version = "0.1.0"
description = "TensorRT-accelerated pose estimation preprocessor for Scope VACE conditioning"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Daydream" }]
keywords = ["pose-estimation", "tensorrt", "controlnet", "vace", "scope"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "opencv-python>=4.8",
    "huggingface-hub>=0.20",
    "tensorrt>=10.0",
    "polygraphy>=0.49",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[project.entry-points.scope]
pose_tensorrt = "scope_pose_tensorrt"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scope_pose_tensorrt"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
