[project]
name = "scope-pipeline-passthrough"
version = "0.1.0"
description = "Passthrough pipeline for daydream-scope - minimal testing pipeline"
requires-python = ">=3.10.12"
dependencies = [
    "scope-worker-base",
    "numpy>=1.24.0",
    "einops>=0.8.1",
]

[tool.uv.sources]
scope-worker-base = { path = "../../../../../worker_env", editable = true }
